<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/listView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/radar"
        android:id="@+id/radarButton"
        android:layout_weight="1"
        android:background="#ff4945" />
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/weather_lady"
        android:id="@+id/weatherLadyButton"
        android:layout_weight="1"

        android:background="#04bafb" />

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/action_settings"
        android:id="@+id/settingsButton"
        android:layout_weight="1"
        android:background="#660066" />
</LinearLayout>
</LinearLayout>
